--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,8 @@
 <link href='css/estilo.css' rel='stylesheet' type='text/css'/>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/bootstrap.min.js"></script>
+<script src="cordova.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 <style>
 @font-face {
     font-family: Lato;
